--- a/site/notebooks/code_samples/nlp_and_llm/foundation_models_summarization_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/foundation_models_summarization_demo.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-7712d42b5de9414ab0ada1a836ec292b",
+   "id": "copyright-b34e4189be964082bb87b10aa94dcf6a",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -516,7 +516,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
