--- a/site/notebooks/code_samples/nlp_and_llm/llm_summarization_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/llm_summarization_demo.ipynb
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-2fa8cf438e7846c795d86136e2ff8737",
+   "id": "copyright-f38869c3ab0c4de7989f536d06b51773",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -991,7 +991,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
