--- a/site/notebooks/code_samples/nlp_and_llm/rag_documentation_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/rag_documentation_demo.ipynb
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-c3c7f66d7ff34b20acc6ce689b035a8d",
+   "id": "copyright-397fa35a68a34dc38f5d84d797fb5331",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1652,7 +1652,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
