--- a/site/notebooks/how_to/assign_scores_complete_tutorial.ipynb
+++ b/site/notebooks/how_to/assign_scores_complete_tutorial.ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-558d40f9618f443a902f6e82b19ef637",
+   "id": "copyright-25e9888fae40481b9007f6a2e2bdd60b",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -784,7 +784,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
