--- a/site/notebooks/how_to/run_documentation_sections.ipynb
+++ b/site/notebooks/how_to/run_documentation_sections.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-91227660a8554880b1fd48c405811806",
+   "id": "copyright-f4756a1f66ab49598b696ed86685fcc6",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -565,7 +565,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
