--- a/site/notebooks/how_to/run_unit_metrics.ipynb
+++ b/site/notebooks/how_to/run_unit_metrics.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-9e3803f1f4f141c6bbb19b62c82c4244",
+   "id": "copyright-238ef79bf0f045d9a112ffd540267e96",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -766,7 +766,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
