--- a/site/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.ipynb
+++ b/site/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-6540b3502fe94eed919c7109a67f31cd",
+   "id": "copyright-6ef1ef2b30eb44c29b99e625c58826ee",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -977,7 +977,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
