--- a/site/notebooks/EXECUTED/model_validation/2-start_validation_process.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/2-start_validation_process.ipynb
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-9f5daf1c86b346fd87ad7fa53417c7fb",
+   "id": "copyright-149e9401b9df40d393a2a1958331dea6",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -872,7 +872,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
