--- a/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
+++ b/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-4a8b954ce80b451ea981617ae01863bb",
+   "id": "copyright-e7184e5605bb4f85b3d7b8306aaaef78",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1472,7 +1472,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
