--- a/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models_quantlib.ipynb
+++ b/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models_quantlib.ipynb
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-04d764b723b24d2c91fb160889ce5686",
+   "id": "copyright-de5d1e182b09403abddabc2850f2dd05",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1301,7 +1301,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
