--- a/site/notebooks/code_samples/code_explainer/quickstart_code_explainer_demo.ipynb
+++ b/site/notebooks/code_samples/code_explainer/quickstart_code_explainer_demo.ipynb
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-374a03611aa34d17809511af22876130",
+   "id": "copyright-ccbede139a26452183291a108b791513",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -833,7 +833,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
