--- a/site/notebooks/code_samples/credit_risk/application_scorecard_executive.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_executive.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-c6f1e357abb641589e3e838c42700469",
+   "id": "copyright-97f68fa25e694a059b7028ce3ec374cc",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -353,7 +353,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
