--- a/site/notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-2bb3d61d89b24097acfe3a930a7738c3",
+   "id": "copyright-ce253f0d12144a08847d4a65a250a85f",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -873,7 +873,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
