--- a/site/notebooks/code_samples/credit_risk/application_scorecard_with_ml.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_with_ml.ipynb
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-8dc8c0e2d94e466aa3662abea59ae320",
+   "id": "copyright-00e4b240625f4af29adb179235912142",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1968,7 +1968,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
