--- a/site/notebooks/code_samples/credit_risk/document_excel_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/credit_risk/document_excel_application_scorecard.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-7999db9e05c141ffbb1aebc359e5e991",
+   "id": "copyright-b04bb3907b774a148a65d78c539ffb4d",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -977,7 +977,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
