--- a/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
+++ b/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-dc1c13abf083439bb35183d74f1e3906",
+   "id": "copyright-997b933948594ddd929ee9419957dfe3",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1066,7 +1066,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
