--- a/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-0da375a81eb24d1e9262c75cefa11fe0",
+   "id": "copyright-3441e79421624bc7819dc2c2957bd93f",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1847,7 +1847,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
