--- a/site/notebooks/code_samples/nlp_and_llm/foundation_models_integration_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/foundation_models_integration_demo.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-618bc2e28e5b4c1a86fe7ec816670ecf",
+   "id": "copyright-114aa3e23e7e44318b66971760526b6f",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -469,7 +469,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
