--- a/site/notebooks/code_samples/nlp_and_llm/hugging_face_integration_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/hugging_face_integration_demo.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-36b4de610d8346c2bd39f77034353c5b",
+   "id": "copyright-8e54f1f3ff334b529685ef57073abb3e",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -453,7 +453,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
