--- a/site/notebooks/code_samples/nlp_and_llm/hugging_face_summarization_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/hugging_face_summarization_demo.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-21fc7c08e9eb4c49b870329276d6ee59",
+   "id": "copyright-14c6f04dcd164deb8a1db44fde050729",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -474,7 +474,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
