--- a/site/notebooks/code_samples/nlp_and_llm/rag_benchmark_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/rag_benchmark_demo.ipynb
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-19e39bd8bb4849baa4ad1e25b19c9005",
+   "id": "copyright-09e315440ca84258abe1aaefaca3a3d0",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1828,7 +1828,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
