--- a/site/notebooks/code_samples/time_series/quickstart_time_series_full_suite.ipynb
+++ b/site/notebooks/code_samples/time_series/quickstart_time_series_full_suite.ipynb
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-e1bfae645c344efb893cc91068d739a0",
+   "id": "copyright-3e1111bc137c44b9866472934320b128",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -720,7 +720,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
