--- a/site/notebooks/how_to/configure_dataset_features.ipynb
+++ b/site/notebooks/how_to/configure_dataset_features.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-f866c2325f194718af7e8b6ff634d396",
+   "id": "copyright-77bd4876ab7945d6a1f592e432d81ca5",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -442,7 +442,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
