--- a/site/notebooks/how_to/document_multiple_results_for_the_same_test.ipynb
+++ b/site/notebooks/how_to/document_multiple_results_for_the_same_test.ipynb
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-70d2c811a5404d36a3a64fe7ec71e73b",
+   "id": "copyright-6ce412276b6244aab16b2e3443c6a861",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -593,7 +593,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
