--- a/site/notebooks/how_to/enable_pii_detection.ipynb
+++ b/site/notebooks/how_to/enable_pii_detection.ipynb
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-b5e6bd73e17d4dad8f08bd2d610ea3ae",
+   "id": "copyright-b91f78083ca449d7a755ccfb02d001b1",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -610,7 +610,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
