--- a/site/notebooks/how_to/explore_tests.ipynb
+++ b/site/notebooks/how_to/explore_tests.ipynb
@@ -4387,7 +4387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-37e237f2c9a9471ba73341a731c3f9e5",
+   "id": "copyright-1b1ae13be5d84b3b84274b9e7789f11b",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -4397,7 +4397,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
