--- a/site/notebooks/how_to/log_metrics_over_time.ipynb
+++ b/site/notebooks/how_to/log_metrics_over_time.ipynb
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-3ade6e49f883409ca0bf318bc762a074",
+   "id": "copyright-2b6b06cfa3254951b8ebbc1178037888",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -929,7 +929,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
