--- a/site/notebooks/how_to/run_documentation_tests_with_config.ipynb
+++ b/site/notebooks/how_to/run_documentation_tests_with_config.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-7bfb4adf3fa74d4798cef42604f5d6f1",
+   "id": "copyright-d1660c97181e4b7e9470b3529ffef83d",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -690,7 +690,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
