--- a/site/notebooks/how_to/run_tests/1_run_dataset_based_tests.ipynb
+++ b/site/notebooks/how_to/run_tests/1_run_dataset_based_tests.ipynb
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-4a0bae9136454ace8c99adf8edf1e817",
+   "id": "copyright-25b1e88bb9d849c8a1f3fc48aac4b6a4",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -577,7 +577,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
