--- a/site/notebooks/how_to/run_tests/2_run_comparison_tests.ipynb
+++ b/site/notebooks/how_to/run_tests/2_run_comparison_tests.ipynb
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-ed5da38da21649069130bbd93ea62f44",
+   "id": "copyright-d655a3bbc6e14b15b7466f3808556ef8",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -761,7 +761,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
