--- a/site/notebooks/how_to/run_tests_that_require_multiple_datasets.ipynb
+++ b/site/notebooks/how_to/run_tests_that_require_multiple_datasets.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-2cce0683b80246f6ada2eb0bbd3fd098",
+   "id": "copyright-b40eb05198f94039ae2f66d120320271",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -542,7 +542,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
