--- a/site/notebooks/how_to/understand_utilize_rawdata.ipynb
+++ b/site/notebooks/how_to/understand_utilize_rawdata.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-b30ff7e5445141fda373c9d60f3387ee",
+   "id": "copyright-d9a502e868ba4fc1a70056873609b472",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -712,7 +712,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
