--- a/site/notebooks/how_to/use_dataset_model_objects.ipynb
+++ b/site/notebooks/how_to/use_dataset_model_objects.ipynb
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-15e20dc385d14d9ebd8fa506dee33251",
+   "id": "copyright-340a990e20194848af0efb0c965e219a",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -976,7 +976,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
