--- a/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-9dae2efaa1024dee9020ae673b5817a7",
+   "id": "copyright-58757a9cc9de45069a5e6c57c8aaff14",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -875,7 +875,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
