--- a/site/notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb
+++ b/site/notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyright-20b8614cb05a45f4bb5adb7ceb939482",
+   "id": "copyright-53539c44edf54e4e9bc4d959ffbddd2c",
    "metadata": {},
    "source": [
     "<!-- VALIDMIND COPYRIGHT -->\n",
@@ -1210,7 +1210,7 @@
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to [LICENSE in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
