--- a/site/notebooks/code_samples/time_series/quickstart_time_series_high_code.ipynb
+++ b/site/notebooks/code_samples/time_series/quickstart_time_series_high_code.ipynb
@@ -968,14 +968,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-0e30120b73cd445b92ff0637c3467c01",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
