--- a/site/notebooks/code_samples/code_explainer/quickstart_code_explainer_demo.ipynb
+++ b/site/notebooks/code_samples/code_explainer/quickstart_code_explainer_demo.ipynb
@@ -823,14 +823,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-ccbede139a26452183291a108b791513",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
