--- a/site/notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb
@@ -863,14 +863,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-ce253f0d12144a08847d4a65a250a85f",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
