--- a/site/notebooks/code_samples/credit_risk/application_scorecard_with_ml.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_with_ml.ipynb
@@ -1958,14 +1958,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-00e4b240625f4af29adb179235912142",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
