--- a/site/notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
+++ b/site/notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
@@ -956,14 +956,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-e9a85f828fdb448ba20c565dec9a0b75",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
