--- a/site/notebooks/code_samples/nlp_and_llm/foundation_models_summarization_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/foundation_models_summarization_demo.ipynb
@@ -506,14 +506,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-b34e4189be964082bb87b10aa94dcf6a",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
