--- a/site/notebooks/how_to/explore_test_suites.ipynb
+++ b/site/notebooks/how_to/explore_test_suites.ipynb
@@ -688,14 +688,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-a1609733aeef47c78c2de0ece28f59fa",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
