--- a/site/notebooks/quickstart/quickstart_model_validation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_validation.ipynb
@@ -1173,15 +1173,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33d4214",
+   "id": "copyright-09361e6dcd874470819686c63660be51",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
