--- a/site/notebooks/tutorials/model_development/1-set_up_validmind.ipynb
+++ b/site/notebooks/tutorials/model_development/1-set_up_validmind.ipynb
@@ -440,15 +440,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c974f0",
+   "id": "copyright-3e02e70c1d4d4840bf8d9ef44e2cf20c",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
