--- a/site/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb
+++ b/site/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb
@@ -968,14 +968,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "copyright-2f589b81f04949f6a2c6764859b8bc86",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
