--- a/site/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
+++ b/site/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
@@ -491,15 +491,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47e90901",
+   "id": "copyright-5d7a1c159e4840fca79011d1c0380725",
    "metadata": {},
    "source": [
+    "<!-- VALIDMIND COPYRIGHT -->\n",
+    "\n",
     "<small>\n",
     "\n",
     "***\n",
     "\n",
     "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
-    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "Refer to [LICENSE](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
     "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
    ]
   }
