Edits, update dark pink colour to VM colour

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -18,7 +18,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "<h4>[[contents]{.smallcaps .b}](#contents)</h4><small>{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)</small>"
+    footer: "[[CONTENTS]{.smallcaps .f5 .b}](#contents)&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}"
     revealjs-plugins:
       - slideover
   html:
@@ -31,10 +31,6 @@ skip_preview: true
 ---
 
 # [Contents]{.hidden}{background-image="circle.svg"}
-
-::: footer
-<h4>[contents]{.smallcaps .b}</h4><small>{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)</small>
-:::
 
 :::: {.columns}
 
@@ -156,6 +152,10 @@ skip_preview: true
 
 ::: -->
 
+::: footer
+[CONTENTS]{.smallcaps .f3 .b .dark-pink}&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}
+:::
+
 # [1&ensp;The Inventory]{.hidden}
 
 :::: {.columns}
@@ -183,7 +183,13 @@ ValidMind is your [system of record]{.b} for governance. Use the inventory to [t
 ::::
 
 
-# [Inventory]{.hidden}
+# [The Inventory]{.hidden}
+
+<!-- Section indicator -->
+::: {.f6 .tr .nt3 .silver}
+The Inventory
+:::
+
 
 :::: {.columns}
 
@@ -218,9 +224,14 @@ The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own
 
 # [Registration]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tr .nt3 .silver}
+The Inventory
+:::
+
 :::: {.columns}
 
-::: {.column width="60%" .pr3 .nt5 .tc}
+::: {.column width="60%" .pr3 .nt6 .tc}
 ![](../assets/vm-model-registration-ss1-23.gif){width="80%" fig-alt="An animation of the registration process as you step through a series of classification drop-down menus" .screenshot .tilt-right}
 :::
 
@@ -245,7 +256,7 @@ For example, you can require users to [identify AI applications]{.b} so that the
 
 ::::
 
-::: {.slideover--b .three-quarters .auto-collapse}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -446,7 +457,7 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 
 ::::
 
-::: {.slideover--b .three-quarters .auto-collapse}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
