Add section indicators

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -18,7 +18,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "[[CONTENTS]{.smallcaps .f5 .b}](#contents)&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}"
+    footer: "[[CONTENTS]{.smallcaps .f5 .b}](#contents)<br>[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}"
     revealjs-plugins:
       - slideover
   html:
@@ -153,7 +153,7 @@ skip_preview: true
 ::: -->
 
 ::: footer
-[CONTENTS]{.smallcaps .f3 .b .dark-pink}&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}
+[CONTENTS]{.smallcaps .f1 .b .dark-pink}&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}
 :::
 
 # [1&ensp;The Inventory]{.hidden}
@@ -186,7 +186,7 @@ ValidMind is your [system of record]{.b} for governance. Use the inventory to [t
 # [The Inventory]{.hidden}
 
 <!-- Section indicator -->
-::: {.f6 .tr .nt3 .silver}
+::: {.f6 .tr .nt3 .pr2 .silver}
 The Inventory
 :::
 
@@ -225,7 +225,7 @@ The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own
 # [Registration]{.hidden}
 
 <!-- Section indicator -->
-::: {.f6 .tr .nt3 .silver}
+::: {.f6 .tr .nt3 .pr4 .silver}
 The Inventory
 :::
 
@@ -303,13 +303,18 @@ ValidMind workflows enable governance by defining [roles and responsibilities]{.
 
 # [Roles and responsibilities]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tr .mb4 .silver}
+Workflows + Approvals
+:::
+
 :::: {.columns}
 
 ::: {.column width="60%" .tc .nt6}
 ![](../assets/vm-risk-classification-workflow.gif){width="80%" fig-alt="A screenshot of workflow detail showing how model registration includes a risk classification step" .screenshot .tilt-right}
 :::
 
-::: {.column width="40%" .f3 .pl3 .nt4}
+::: {.column width="40%" .f3 .pl3 .nt3}
 [Roles and responsibilities]{.b} define clear actions for your stakeholders to follow.
 
 <!-- [Roles and Responsibilities]{.f3 .b} 
@@ -363,6 +368,11 @@ Track all activities for:
 
 
 # [What do I use workflows for?]{.hidden}
+
+<!-- Section indicator -->
+::: {.f6 .tl .mb4 .pl4 .silver}
+Workflows + Approvals
+:::
 
 :::: {.columns}
 
@@ -436,13 +446,18 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 
 # [Reporting and Analytics]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tr .mb4 .pr3 .silver}
+Reporting + Analytics
+:::
+
 :::: {.columns}
 
 ::: {.column width="60%" .tc .nt4}
 ![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot .tilt-right}
 :::
 
-::: {.column width="40%" .f3 .pl3 .nt4}
+::: {.column width="40%" .f3 .pl3 .nt3}
 
 [Enable stakeholders]{.b} to take responsibility:
 
@@ -503,17 +518,22 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 # [Documentation]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tr .mb5 .nt6 .pr3 .silver}
+Documentation + Testing + Validation
+:::
+
 :::: {.columns}
 
-::: {.column width="60%" .nt6}
+::: {.column width="60%" .nt5}
 
 ![](../assets/vm-model-documentation.gif){width="90%" fig-alt="An animation of model documentation being scrolled through on the ValidMind platform. The scrolling starts at the documentation overview and then expands the development documentation section" .screenshot .tilt-right}
 
 :::
 
-::: {.column width="40%" .pt4 .pl4 .f3 .pb6}
+::: {.column width="40%" .nt5 .pt3 .pl4 .f3 .pb6}
 
-::: {.pb2 .nt6}
+::: {.pb2}
 [Documentation]{.f2 .b}
 :::
 
@@ -525,7 +545,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 ::::
 
-::: {.slideover--b .auto-collapse-10}
+::: {.slideover--b .auto-collapse-60}
 
 :::: columns
 
@@ -569,9 +589,14 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 # [Testing]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tl .mb5 .nt6 .silver}
+Documentation + Testing + Validation
+:::
+
 :::: {.columns}
 
-::: {.column width="40%" .nt5 .f3 .pr4}
+::: {.column width="40%" .nt4 .f3 .pr4}
 [Testing]{.f2 .b}
 
 [[{{< fa brands github >}} open source software]{.smallcaps .b .black}](https://github.com/validmind/validmind-library){target="_blank"}
@@ -582,7 +607,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 - Extensible with [custom tests]{.b} and [test providers]{.b}
 :::
 
-::: {.column width="60%" .nt5}
+::: {.column width="60%" .nt4}
 ![](../assets/vm-test-sandbox.gif){fig-alt="An animation of the model testing process as you see various test results and documentation being created" .screenshot .tilt-left}
 :::
 
@@ -610,6 +635,11 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 
 # [Validation]{.hidden}
+
+<!-- Section indicator -->
+::: {.f6 .tr .nt3 .silver}
+Documentation + Testing + Validation
+:::
 
 :::: {.columns}
 
@@ -646,10 +676,14 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 # [Robust processes]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tl .mb4 .nt6 .silver}
+Documentation + Testing + Validation
+:::
+
 :::: {.columns}
 
-::: {.column width="50%" .pr4 .f3 .nt5} 
-
+::: {.column width="50%" .pr4 .f3 .nt3} 
 [Robust processes]{.f2 .b}
 
 - Create [challenger models]{.b}
@@ -658,7 +692,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 - [Collaborate]{.b} with developers to resolve issues
 :::
 
-::: {.column width="50%" .nt5}
+::: {.column width="50%" .nt3}
 ![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot .tilt-left}
 :::
 
@@ -716,10 +750,18 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 
 # [Ongoing monitoring]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tl .pt6 .nt3 .silver}
+Ongoing Monitoring
+:::
+
 :::: {.columns}
 
-::: {.column width="50%" .f3 .pt4 .pt5}
-[Ongoing Monitoring]{.f2 .b}
+::: {.column width="50%" .f3 .pt1}
+
+::: {.pb2}
+[Monitor your performance]{.f2 .b}
+:::
 
 {{< fa check >}}&ensp; [Enable]{.b} for any item in the inventory
 
@@ -730,7 +772,7 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 {{< fa check >}}&ensp; [Define]{.b} thresholds and receive alerts
 :::
 
-::: {.column width="50%" .pl4 .tr .f3 .tilt-left}
+::: {.column width="50%" .pl4 .tr .f3 .nt6 .tilt-left}
 ![Ongoing monitoring documentation](../assets/vm-ongoing-monitoring.gif){width="80%" fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind platform showing performance metrics and potential issues" .screenshot}
 
 ![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){width="80%" fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
@@ -740,16 +782,21 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 
 # [Governance]{.hidden}
 
-:::: {.columns}
-
-::: {.column width="50%" .nt5 .pl4}
-![](../assets/vm-periodic-review-long.gif){width="90%" fig-alt="A screenshot of workflow showing how periodic reviews are performed." .screenshot .tilt-right}
+<!-- Section indicator -->
+::: {.f6 .tr .nt5 .mb5 .pr4 .silver}
+Ongoing Monitoring
 :::
 
-::: {.column width="50%" .f4 .nt5}
+:::: {.columns}
+
+::: {.column width="40%" .nt5 .pl4}
+![](../assets/vm-periodic-review-long.gif){fig-alt="A screenshot of workflow showing how periodic reviews are performed." .screenshot .tilt-right}
+:::
+
+::: {.column width="60%" .pl4 .f4 .nt5}
 [Outcomes Analysis]{.f2 .b}
 
-::: {.pl4 .mb4}
+::: {.pl4 .mb3}
 - Detect test results that [exceed thresholds]{.b}
 - Follow [escalation workflows]{.b} when metrics exceed limits
 - Document and [track remediation]{.b} activities
@@ -769,7 +816,7 @@ Combine monitoring & workflows for:
 
 ::::
 
-::: {.slideover--b .three-quarters .auto-collapse}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -816,6 +863,11 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 
 # [Document checker]{.hidden}
 
+<!-- Section indicator -->
+::: {.f6 .tr .nt6 .mb4 .pr4 .silver}
+Risk Insights + Regulatory Alignment
+:::
+
 :::: {.columns}
 
 ::: {.column width="50%"}
@@ -826,7 +878,7 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 
 :::
 
-::: {.column width="50%" .nt4}
+::: {.column width="50%" .nt3}
 
 ::: {.pt2 .pl4 .pb4 .f3}
 [Document Checker]{.f2 .b}
@@ -846,7 +898,7 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 
 ::::
 
-::: {.slideover--b .auto-collapse .three-quarters}
+::: {.slideover--b .auto-collapse}
 
 ::: {.tc .nt4}
 [[{{< fa circle-info >}}&ensp;How do I use the document checker?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-documentation/check-documentation-for-compliance.html){target="_blank"}
