Address more review comments

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -18,7 +18,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "[[CONTENTS]{.smallcaps .f5 .b}](#contents)<br>[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}"
+    footer: "[[CONTENTS]{.smallcaps .f5 .b}](#contents)&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}"
     revealjs-plugins:
       - slideover
   html:
@@ -304,7 +304,7 @@ ValidMind workflows enable governance by defining [roles and responsibilities]{.
 # [Roles and responsibilities]{.hidden}
 
 <!-- Section indicator -->
-::: {.f6 .tr .mb4 .silver}
+::: {.f6 .tr .mb4 .nt4 .silver}
 Workflows + Approvals
 :::
 
@@ -346,7 +346,7 @@ Track all activities for:
 
 ::::
 
-::: {.slideover--b .auto-collapse}
+::: {.slideover--b .auto-collapse-30}
 
 :::: columns
 
@@ -359,7 +359,7 @@ Track all activities for:
 :::
 
 ::: {.column width="20%" .pl4 .nt3}
-[SR 11-7]{.button-small .shadow-5-ns}<br>[SS1/23]{.button-small .shadow-5-ns}<br>[E-23]{.button-small .shadow-5-ns}<br>[EU AI ACT]{.button-small .shadow-5-ns}
+[SR 11-7](/about/use-cases/sr-11-7.qmd){target="_blank" .button-small .shadow-5-ns}<br>[SS1/23](/about/use-cases/ss1-23.qmd){target="_blank" .button-small .shadow-5-ns}<br>[E-23](/about/use-cases/e-23.qmd){target="_blank" .button-small .shadow-5-ns}<br>[EU AI ACT](/about/use-cases/eu-ai-act.qmd){target="_blank" .button-small .shadow-5-ns}
 :::
 
 ::::
@@ -370,7 +370,7 @@ Track all activities for:
 # [What do I use workflows for?]{.hidden}
 
 <!-- Section indicator -->
-::: {.f6 .tl .mb4 .pl4 .silver}
+::: {.f6 .tl .mb4 .pl4 .nt3 .silver}
 Workflows + Approvals
 :::
 
