Yet more edits to address review comments

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -381,15 +381,15 @@ Workflows + Approvals
 [What can I use workflows for?]{.f2 .b}
 
 ::: {.pl2 .pt2}
-{{< fa check >}}&ensp;[Implement]{.b} governance for regulations and  policies.
+[{{< fa check >}}]{.dark-pink} &ensp;[Implement]{.b} governance for regulations and  policies.
 
-{{< fa check >}}&ensp;[Demonstrate]{.b} compliance to auditors.
+[{{< fa check >}}]{.dark-pink} &ensp;[Demonstrate]{.b} compliance to auditors.
 
-{{< fa check >}}&ensp;[Automate]{.b} risk processes with triggers and schedules.
+[{{< fa check >}}]{.dark-pink} &ensp;[Automate]{.b} risk processes with triggers and schedules.
 
-{{< fa check >}}&ensp;[Standardize]{.b} documentation and validation.
+[{{< fa check >}}]{.dark-pink} &ensp;[Standardize]{.b} documentation and validation.
 
-{{< fa check >}}&ensp;[Get alerts]{.b} for items that need attention.
+[{{< fa check >}}]{.dark-pink} &ensp;[Get alerts]{.b} for items that need attention.
 :::
 :::
 
@@ -698,16 +698,17 @@ Documentation + Testing + Validation
 
 ::::
 
-::: {.slideover--b .auto-collapse}
+::: {.slideover--b .auto-collapse-60}
 
 :::: columns
 
 ::: {.column width="50%" .nt4}
-[Did you know?]{.f3 .b}<br>
-Validators can use the same library as developers: 
+[{{< fa lightbulb >}}&ensp;Did you know?]{.f3 .b}<br>
 
-- Run your own tests to create challenger models
-- Link the results as validator evidence to your report
+::: {.pl3 .nt4}
+As a validator, you can **the same library** as developers: 
+:::
+
 :::
 
 ::: {.column width="50%" .tc .pl4 .nt4}
@@ -716,6 +717,11 @@ Validators can use the same library as developers:
 :::
 
 ::::
+
+::: {.nt4}
+- Run thorough model comparison tests, such as performance, diagnostic, and feature importance tests by  to mount an effective challenge.
+- Link the test results from your challenger model as evidence to your validation report.
+:::
 
 :::
 
@@ -763,13 +769,13 @@ Ongoing Monitoring
 [Monitor your performance]{.f2 .b}
 :::
 
-{{< fa check >}}&ensp; [Enable]{.b} for any item in the inventory
+[{{< fa check >}}]{.dark-pink} &ensp; [Enable]{.b} for any item in the inventory
 
-{{< fa check >}}&ensp; [Track]{.b} performance over time
+[{{< fa check >}}]{.dark-pink} &ensp; [Track]{.b} performance over time
 
-{{< fa check >}}&ensp; [Detect]{.b} data drift and other issues early
+[{{< fa check >}}]{.dark-pink} &ensp; [Detect]{.b} data drift and other issues early
 
-{{< fa check >}}&ensp; [Define]{.b} thresholds and receive alerts
+[{{< fa check >}}]{.dark-pink} &ensp; [Define]{.b} thresholds and receive alerts
 :::
 
 ::: {.column width="50%" .pl4 .tr .f3 .nt6 .tilt-left}
