Edits, tweaks, rain dance

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -153,7 +153,7 @@ skip_preview: true
 ::: -->
 
 ::: footer
-[CONTENTS]{.smallcaps .f1 .b .dark-pink}&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}
+[CONTENTS]{.smallcaps .f3 .b .dark-pink}&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}
 :::
 
 # [1&ensp;The Inventory]{.hidden}
@@ -706,7 +706,7 @@ Documentation + Testing + Validation
 [{{< fa lightbulb >}}&ensp;Did you know?]{.f3 .b}<br>
 
 ::: {.pl3 .nt4}
-As a validator, you can **the same library** as developers: 
+As a validator, you can use **the same library** as developers: 
 :::
 
 :::
@@ -913,7 +913,7 @@ Risk Insights + Regulatory Alignment
 :::
 
 
-# [Putting governance into practice]{.hidden}{background-image="circle-arrow.svg"}
+# [Putting governance into practice]{.hidden}
 
 :::: {.columns}
 
@@ -927,9 +927,9 @@ Use our implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
-[[AI governance<br>[EU AI ACT]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
+[[AI governance<br>[[EU AI ACT]{.dark-pink}]{.button-small .f6}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
 
-[[Model risk management<br>[SR 11-7]{.button-small .shadow-5-ns .f6 .tr} [SS1/23]{.button-small .shadow-5-ns .f6 .tr} [E-23]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
+[[Model risk management<br>[[SR 11-7]{.dark-pink}]{.button-small .f6} [[SS1/23]{.dark-pink}]{.button-small .f6} [[E-23]{.dark-pink}]{.button-small .f6}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
 :::
 :::
 
@@ -937,8 +937,8 @@ Use our implementation guides for:
 
 ::: {.column width="50%" .pl5 .pr2 .tilt-left}
 
-::: {.pl4 .mb4 .bg-white .ba .b--dark-green .pa3 .br3 .shadow-5-ns}
-[What these guides cover]{.f3 .b}
+::: {.pl4 .mb4 .bg-dark-green .white .ba .pa3 .br3 .shadow-5-ns .o-90}
+[{{< fa lightbulb >}}&ensp;What these guides cover]{.f3 .b}
 
 ::: {.f4}
 - Inventory setup, custom fields, risk classification
