Tinker with subtle radial gradient, rotate s-shape

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -30,7 +30,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# [Contents]{.hidden}{background-image="circle.svg"}
+# [Contents]{.hidden}{background-image="circle.svg" background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -156,7 +156,7 @@ skip_preview: true
 [CONTENTS]{.smallcaps .f3 .b .dark-pink}&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}
 :::
 
-# [1&ensp;The Inventory]{.hidden}
+# [1&ensp;The Inventory]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -273,7 +273,7 @@ For example, you can require users to [identify AI applications]{.b} so that the
 :::
 
 
-# [2&ensp;Workflows + Approvals]{.hidden}
+# [2&ensp;Workflows + Approvals]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -416,7 +416,7 @@ Workflows + Approvals
 :::
 
 
-# [3&ensp;Reporting + Analytics]{.hidden}
+# [3&ensp;Reporting + Analytics]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -489,7 +489,7 @@ Reporting + Analytics
 :::
 
 
-# [4&ensp;Documentation + Testing + Validation]{.hidden}
+# [4&ensp;Documentation + Testing + Validation]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -726,7 +726,7 @@ As a validator, you can use **the same library** as developers:
 :::
 
 
-# [5&ensp;Ongoing Monitoring]{.hidden}
+# [5&ensp;Ongoing Monitoring]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -839,7 +839,7 @@ Combine monitoring & workflows for:
 :::
 
 
-# [6&ensp;Risk Insights + Regulatory Alignment]{.hidden}
+# [6&ensp;Risk Insights + Regulatory Alignment]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -913,7 +913,7 @@ Risk Insights + Regulatory Alignment
 :::
 
 
-# [Putting governance into practice]{.hidden}
+# [Putting governance into practice]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -957,7 +957,7 @@ Use our implementation guides for:
 
 
 
-# [Need more?]{.hidden}
+# [Need more?]{.hidden}{background-image="s-shape.svg" background-size="cover" background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 ::: {.nt2 .f .b}
 Need more?
@@ -967,12 +967,14 @@ Need more?
 
 ::: {.column width="25%" .pt4}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .br3}
 ::: {.nt5}
 ![](quickstart.png){height=125px fig-alt="Quickstarts"}
 :::
 
+::: {.pl2 .pr2}
 [[Quickstarts]{.b .black .f4}](https://docs.validmind.com/get-started/get-started.html){target="_blank"}
+:::
 
 :::
 :::
@@ -984,7 +986,9 @@ Need more?
 ![](training.png){height=125px fig-alt="Training"}
 :::
 
+::: {.pl4 .pr4}
 [[Training]{.b .black .f4}](https://docs.validmind.com/training/training.qmd){target="_blank"}
+:::
 
 :::
 :::
@@ -996,7 +1000,9 @@ Need more?
 ![](guides.png){height=125px fig-alt="User Guides"}
 :::
 
+::: {.pl2 .pr2}
 [[User Guides]{.b .black .f4}](https://docs.validmind.com/guide/guides.html){target="_blank"}
+:::
 
 :::
 :::
@@ -1008,7 +1014,9 @@ Need more?
 ![](code-samples.png){height=125px fig-alt="Code Samples"}
 :::
 
+::: {.pl2 .pr2}
 [[Code Samples]{.b .black .f4}](https://docs.validmind.com/developer/samples-jupyter-notebooks.html){target="_blank"}
+:::
 
 :::
 :::
