Update s-shape again, tweaks

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -913,7 +913,7 @@ Risk Insights + Regulatory Alignment
 :::
 
 
-# [Putting governance into practice]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
+# [Putting governance into practice]{.hidden}
 
 :::: {.columns}
 
@@ -957,15 +957,15 @@ Use our implementation guides for:
 
 
 
-# [Need more?]{.hidden}{background-image="s-shape.svg" background-size="cover" background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
+# [Need more?]{.hidden}{background-image="s-shape.svg" background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
-::: {.nt2 .f .b}
+::: {.nt6 .pb6 .f .b}
 Need more?
 :::
 
 :::: {.columns}
 
-::: {.column width="25%" .pt4}
+::: {.column width="25%" .pl3 .pt5}
 
 ::: {.button .button-light-green .shadow-5-ns .br3}
 ::: {.nt5}
@@ -979,7 +979,7 @@ Need more?
 :::
 :::
 
-::: {.column width="25%" .pt4}
+::: {.column width="25%" .pl3 .nt5}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.nt5}
@@ -993,7 +993,7 @@ Need more?
 :::
 :::
 
-::: {.column width="25%" .pt4}
+::: {.column width="25%" .pl3 .pt6}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.nt5}
@@ -1007,7 +1007,7 @@ Need more?
 :::
 :::
 
-::: {.column width="25%" .pt4}
+::: {.column width="25%" .pl4 .pt1}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.nt5}
