Update learning paths page, product tour registration page, and fix typo

--- a/site/training/what-is-validmind/what-is-validmind-register.qmd
+++ b/site/training/what-is-validmind/what-is-validmind-register.qmd
@@ -16,7 +16,7 @@ listing:
     contents:
     - path: what-is-validmind.html
       title: "What is ValidMind?"
-      description: "{{< fa check >}} Explore the inventory and registration<br> {{< fa check >}} Understand workflows for governance and compliance<br> {{< fa check >}} Discover automated documentation and testing<br> {{< fa check >}} Learn about review, oversight, and attestation<br> {{< fa check >}} See analytics and monitoring in action"
+      description: "{{< fa check >}} The Inventory<br> {{< fa check >}} Workflows + Approvals<br> {{< fa check >}} Reporting + Analytics<br> {{< fa check >}} Documentation + Testing + Validation<br> {{< fa check >}} Ongoing Monitoring<br> {{< fa check >}} Risk Insights + Regulatory Alignment"
       reading-time: "5"
       author: "{{< var vm.product >}}"
     fields: [title, subtitle, description, reading-time]
@@ -31,7 +31,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 
 <!-- COURSE CARD -->
 ::: {.attn}
-## In this course
+## In this tour
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -51,19 +51,63 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 
 :::: {.flex .flex-wrap .justify-around}
 
+::: {.w-50-ns}
+#### <sup>Section 1</sup><br> The Inventory
+
+- Understand how the inventory serves as your system of record for governance
+- Track AI systems, models, use cases, and tools
+- Learn to register items and start the governance lifecycle
+:::
+
+::: {.w-50-ns}
+#### <sup>Section 2</sup><br> Workflows + Approvals
+
+- Define roles and responsibilities for stakeholders
+- Implement governance for regulations and policies
+- Track all activities with audit trails
+:::
 
 ::::
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-100 .pa3 .tc}
+::: {.w-50-ns}
+#### <sup>Section 3</sup><br> Reporting + Analytics
 
+- Use customizable dashboards for oversight
+- Track validation issues, approvals, and sign-offs
+- Export documents to share with stakeholders
+:::
+
+::: {.w-50-ns}
+#### <sup>Section 4</sup><br> Documentation + Testing + Validation
+
+- Automate documentation with predefined templates
+- Run 200+ out-of-the-box tests
+- Prepare validation reports and assess compliance
 :::
 
 ::::
 
-:::{#what-is-validmind-modules}
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Section 5</sup><br> Ongoing Monitoring
+
+- Enable monitoring for items in the inventory
+- Track performance and detect data drift
+- Define thresholds and receive alerts
 :::
+
+::: {.w-50-ns}
+#### <sup>Section 6</sup><br> Risk Insights + Regulatory Alignment
+
+- Use AI-powered document checker for compliance
+- Align with regulatory frameworks like SR 11-7, SS1/23, E-23, and EU AI Act
+- Generate risk assessments with recommendations
+:::
+
+::::
 
 :::
 
