Uncloak and update integrations docs with AWS Bedrock example

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -76,12 +76,12 @@ Link to models in external registries and development platforms and keep invento
 
 ::: {.w-33-ns}
 - AWS SageMaker
-<!-- - Databricks -->
+- AWS Bedrock
 :::
 
 ::: {.w-33-ns}
 - MLflow
-<!-- - AWS Bedrock -->
+<!-- - Databricks -->
 :::
 
 ::: {.w-33-ns}
